--- a/src/app/pages/mpandetails/mpan-details-search/mpan-details-search.component.html
+++ b/src/app/pages/mpandetails/mpan-details-search/mpan-details-search.component.html
@@ -2,7 +2,7 @@
     <div class="col-md-12">
         <nb-card>
             <nb-card-body>
-                <div class="col-xl-4 col-lg-6 col-md-8 col-sm-12">
+                <div class="col-xl-4 col-lg-6 col-md-8 col-sm-12 hvr-underline-from-center">
                     <nb-search type="rotate-layout"
                                tag="mpan-search"
                                placeholder="search MPAN .."
