--- a/src/app/pages/mpandetails/mpan-details-form/mpan-details-form.component.html
+++ b/src/app/pages/mpandetails/mpan-details-form/mpan-details-form.component.html
@@ -17,7 +17,7 @@
                                     <div class="ref-id-container">
                                         <span class="text-basic h3">MPAN #</span>
                                         <span class="text-primary h3">
-                                            {{ form.getRawValue()['id'] }}
+                                            {{ rawFormValue['id'] }}
                                         </span>
                                     </div>
                                 </div>
@@ -924,17 +924,16 @@
                     </nb-tab>
                     <!--ASSET DETAILS TAB-->
                     <nb-tab tabTitle="ASSET Details" tabIcon="file-text-outline" responsive>
-                        <form class="form-inline">
-                            <div class="col-md-12" [formGroup]="form.get('asset')">
+                        <form class="form-inline" [formGroup]="form.get('asset')">
+                            <div class="col-md-12">
                                 <div class="row">
                                     <div class="ref-id-container">
                                         <span class="text-basic h3">Business Ref #</span>
                                         <span class="text-primary h3">
-                                            {{ form.getRawValue()['asset']['business_reference'] }}
+                                            {{ rawFormValue['asset']['business_reference'] }}
                                         </span>
                                     </div>
                                 </div>
-                                <hr>
                                 <div class="row">
                                     <div class="form-group col-md-6">
                                         <label class="label col-sm-3 col-form-label">Business Ref ID</label>
@@ -990,7 +989,7 @@
                                         <label class="label col-sm-3 col-form-label">Supply Capacity</label>
                                         <div class="col-sm-9">
                                             <input type="text"
-                                                   class="input-full-width status-warning size-medium shape-semi-round"
+                                                   class="input-full-width size-medium shape-semi-round"
                                                    nbInput fullWidth
                                                    placeholder=".."
                                                    formControlName="supply_capacity">
@@ -1005,6 +1004,149 @@
                                                    placeholder=""
                                                    formControlName="supply_voltage">
                                         </div>
+                                    </div>
+                                </div>
+                                <hr>
+                                <div class="row">
+                                    <h6 class="text-warning">ADDRESS</h6>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <form [formGroup]="form.get('asset').get('address')">
+                                            <!--ADDRESS LINES-->
+                                            <div class="form-group col-md-9">
+                                                <label class="label col-sm-3 col-form-label">
+                                                    Address Type</label>
+                                                <div class="col-sm-9">
+                                                    <input type="text"
+                                                           class="input-full-width size-medium shape-rectangle"
+                                                           nbInput fullWidth
+                                                           placeholder=""
+                                                           formControlName="address_type">
+                                                </div>
+                                            </div>
+                                            <div class="form-group col-md-9">
+                                                <label class="label col-sm-3 col-form-label">
+                                                    line 1</label>
+                                                <div class="col-sm-9">
+                                                    <input type="text"
+                                                           class="input-full-width size-medium shape-rectangle"
+                                                           nbInput fullWidth
+                                                           placeholder=""
+                                                           formControlName="address_1">
+                                                </div>
+                                            </div>
+                                            <div class="form-group col-md-9">
+                                                <label class="label col-sm-3 col-form-label">
+                                                    line 2</label>
+                                                <div class="col-sm-9">
+                                                    <input type="text"
+                                                           class="input-full-width size-medium shape-rectangle"
+                                                           nbInput fullWidth
+                                                           placeholder=""
+                                                           formControlName="address_2">
+                                                </div>
+                                            </div>
+                                            <div class="form-group col-md-9">
+                                                <label class="label col-sm-3 col-form-label">
+                                                    line 3</label>
+                                                <div class="col-sm-9">
+                                                    <input type="text"
+                                                           class="input-full-width size-medium shape-rectangle"
+                                                           nbInput fullWidth
+                                                           placeholder=""
+                                                           formControlName="address_3">
+                                                </div>
+                                            </div>
+                                            <div class="form-group col-md-9">
+                                                <label class="label col-sm-3 col-form-label">
+                                                    line 4</label>
+                                                <div class="col-sm-9">
+                                                    <input type="text"
+                                                           class="input-full-width size-medium shape-rectangle"
+                                                           nbInput fullWidth
+                                                           placeholder=""
+                                                           formControlName="address_4">
+                                                </div>
+                                            </div>
+                                            <div class="form-group col-md-9">
+                                                <label class="label col-sm-3 col-form-label">
+                                                    line 5</label>
+                                                <div class="col-sm-9">
+                                                    <input type="text"
+                                                           class="input-full-width size-medium shape-rectangle"
+                                                           nbInput fullWidth
+                                                           placeholder=""
+                                                           formControlName="address_5">
+                                                </div>
+                                            </div>
+                                            <div class="form-group col-md-9">
+                                                <label class="label col-sm-3 col-form-label">
+                                                    line 6</label>
+                                                <div class="col-sm-9">
+                                                    <input type="text"
+                                                           class="input-full-width size-medium shape-rectangle"
+                                                           nbInput fullWidth
+                                                           placeholder=""
+                                                           formControlName="address_6">
+                                                </div>
+                                            </div>
+                                            <div class="form-group col-md-9">
+                                                <label class="label col-sm-3 col-form-label">
+                                                    line 7</label>
+                                                <div class="col-sm-9">
+                                                    <input type="text"
+                                                           class="input-full-width size-medium shape-rectangle"
+                                                           nbInput fullWidth
+                                                           placeholder=""
+                                                           formControlName="address_7">
+                                                </div>
+                                            </div>
+                                            <div class="form-group col-md-9">
+                                                <label class="label col-sm-3 col-form-label">
+                                                    line 8</label>
+                                                <div class="col-sm-9">
+                                                    <input type="text"
+                                                           class="input-full-width size-medium shape-rectangle"
+                                                           nbInput fullWidth
+                                                           placeholder=""
+                                                           formControlName="address_8">
+                                                </div>
+                                            </div>
+                                            <div class="form-group col-md-9">
+                                                <label class="label col-sm-3 col-form-label">
+                                                    line 9</label>
+                                                <div class="col-sm-9">
+                                                    <input type="text"
+                                                           class="input-full-width size-medium shape-rectangle"
+                                                           nbInput fullWidth
+                                                           placeholder=""
+                                                           formControlName="address_9">
+                                                </div>
+                                            </div>
+                                            <div class="form-group col-md-9">
+                                                <label class="label col-sm-3 col-form-label">Post
+                                                    Code</label>
+                                                <div class="col-sm-9">
+                                                    <input type="text"
+                                                           class="input-full-width size-medium shape-rectangle"
+                                                           nbInput fullWidth
+                                                           placeholder=""
+                                                           formControlName="post_code">
+                                                </div>
+                                            </div>
+                                            <div class="form-group col-md-9">
+                                                <label class="label col-sm-3 col-form-label">Date Effective
+                                                    From</label>
+                                                <div class="col-sm-9">
+                                                    <input type="text"
+                                                           class="input-full-width size-medium shape-rectangle"
+                                                           nbInput fullWidth
+                                                           placeholder=""
+                                                           formControlName="effective_from">
+                                                </div>
+                                            </div>
+                                        </form>
                                     </div>
                                 </div>
                                 <hr>
