--- a/src/app/pages/asset-details/asset-details-search/asset-details-search.component.html
+++ b/src/app/pages/asset-details/asset-details-search/asset-details-search.component.html
@@ -26,7 +26,7 @@
                         <nb-list-item class="" *ngIf="searchResultVisible">
                             <div class="row">
                                 <span class="col-md-4"> ASSET </span>
-                                <span class="col-md-4"> BUS ID </span>
+                                <span class="col-md-4"> BUSINESS REF ID </span>
                                 <span class="col-md-4"> DESCRIPTION </span>
                             </div>
                         </nb-list-item>
