--- a/src/app/pages/asset-details/asset-details-view/asset-details-view.component.html
+++ b/src/app/pages/asset-details/asset-details-view/asset-details-view.component.html
@@ -1,6 +1,6 @@
 <div class="col-md-12 col-lg-12 col-sm-12">
     <div class="row">
-        <button (click)="onClickBack()"
+        <button (click)="onClickHome()"
                 ghost size="small" status="primary"
                 class="hvr-bob" nbButton>
             <nb-icon icon="home-outline" status="primary"></nb-icon>
@@ -12,13 +12,13 @@
             <nb-icon icon="arrowhead-left-outline" status="primary"></nb-icon>
             Back
         </button>
-        <button (click)="onClickBack()"
+        <button (click)="onClickSave()"
                 ghost size="small" status="primary"
                 class="hvr-bob" nbButton>
             <nb-icon icon="save-outline" status="danger"></nb-icon>
             Save
         </button>
-        <button (click)="onClickBack()"
+        <button (click)="onClickReset()"
                 ghost size="small" status="primary"
                 class="hvr-bob" nbButton>
             <nb-icon icon="refresh-outline" status="primary"></nb-icon>
@@ -37,28 +37,41 @@
                         <h6 class="text-warning">RELATED MPAN(s)</h6>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-md-6 offset-1">
-                        <div class="row">
-                            <a class="hvr-grow" routerLink="/pages/mpan-details/3000311842220"
-                               routerLinkActive="active">MPAN -- 3000311842220</a>
-                        </div>
-                        <div class="row">
-                            <a class="hvr-grow" routerLink="/pages/mpan-details/3007428567721"
-                               routerLinkActive="active">MPAN -- 3007428567721</a>
-                        </div>
-                        <div class="row">
-                            <a class="hvr-grow" routerLink="/pages/mpan-details/3038647382451"
-                               routerLinkActive="active">MPAN -- 3038647382451</a>
-                        </div>
-                        <div class="row">
-                            <a class="hvr-grow" routerLink="/pages/mpan-details/3052869536957"
-                               routerLinkActive="active">MPAN -- 3052869536957</a>
-                        </div>
-                        <div class="row">
-                            <a class="hvr-grow" routerLink="/pages/mpan-details/3062232292802"
-                               routerLinkActive="active">MPAN -- 3062232292802</a>
-                        </div>
+                <div class="row" *ngIf="assetDetailsResponse">
+                    <div class="col-md-12 col-lg-12">
+                        <nb-list>
+                            <nb-list-item>
+                                <div class="row">
+                                    <span class="col-md-4"> MPAN-ID </span>
+                                    <span class="col-md-4"> METER ID </span>
+                                    <span class="col-md-4"> ADDRESS </span>
+                                </div>
+                            </nb-list-item>
+                            <nb-list-item *ngFor="let mpan of assetDetailsResponse.mpans">
+                                <div class="row">
+                                    <span class="col-md-4">
+                                        <a class="hvr-grow"
+                                           [routerLink]="'/pages/mpan-details/' + mpan.id"
+                                           routerLinkActive="active">
+                                            <span>
+                                                <nb-icon icon="arrow-right" pack="eva" status="info"></nb-icon>
+                                                {{ 'MPAN ID -- ' + mpan.id }}
+                                            </span>
+                                        </a>
+                                    </span>
+                                    <span class="col-md-4">
+                                        <nb-icon icon="arrow-right" pack="eva" status="info"></nb-icon>
+                                        {{ mpan.meter.meter_fk }}
+                                    </span>
+                                    <span class="col-md-4">
+                                        <nb-icon icon="arrow-right" pack="eva" status="warning"></nb-icon>
+                                        {{ mpan.mpan_address.address_1 + ', '
+                                         + mpan.mpan_address.address_2 + ', '
+                                         + mpan.mpan_address.post_code }}
+                                    </span>
+                                </div>
+                            </nb-list-item>
+                        </nb-list>
                     </div>
                 </div>
             </nb-card>
