--- a/src/app/pages/mpandetails/mpan-details-form/mpan-details-form.component.html
+++ b/src/app/pages/mpandetails/mpan-details-form/mpan-details-form.component.html
@@ -1,30 +1,35 @@
 <div class="col-md-12 col-lg-12 col-sm-12">
     <div class="row">
-        <button (click)="onClickBack()"
+        <button (click)="onClickHome()"
                 ghost size="small" status="primary"
                 class="hvr-bob" nbButton>
-            <nb-icon icon="home-outline" status="primary" ></nb-icon>Home
+            <nb-icon icon="home-outline" status="primary"></nb-icon>
+            Home
         </button>
         <button (click)="onClickBack()"
                 ghost size="small" status="primary"
                 class="hvr-bob" nbButton>
-            <nb-icon icon="arrowhead-left-outline" status="primary" ></nb-icon>Back
+            <nb-icon icon="arrowhead-left-outline" status="primary"></nb-icon>
+            Back
         </button>
-        <button (click)="onClickBack()"
+        <button (click)="onClickSave()"
                 ghost size="small" status="primary"
                 class="hvr-bob" nbButton>
-            <nb-icon icon="save-outline" status="danger" ></nb-icon>Save
+            <nb-icon icon="save-outline" status="danger"></nb-icon>
+            Save
         </button>
-        <button (click)="onClickBack()"
+        <button (click)="onClickReset()"
                 ghost size="small" status="primary"
                 class="hvr-bob" nbButton>
-            <nb-icon icon="refresh-outline" status="primary" ></nb-icon>Reset
+            <nb-icon icon="refresh-outline" status="primary"></nb-icon>
+            Reset
         </button>
     </div>
     <div class="row">
         <div class="col-md-12 col-lg-12 col-sm-12">
             <nb-card>
                 <nb-tabset fullWidth>
+                    <!--MPAN DETAILS-->
                     <nb-tab tabTitle="MPAN Details" tabIcon="file-text-outline" responsive>
                         <form class="form-inline" [formGroup]="form">
                             <div class="col-md-12">
@@ -643,33 +648,47 @@
                     <nb-tab tabTitle="ASSET Details" tabIcon="file-text-outline" responsive>
                         <ngx-asset-details-form [form]="form.get('asset')"></ngx-asset-details-form>
                         <hr>
+                        <!--RELATED MPANS-->
                         <div class="row">
                             <div class="ref-id-container">
                                 <h6 class="text-warning">RELATED MPAN(s)</h6>
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="col-md-6 offset-1">
-                                <div class="row">
-                                    <a class="hvr-grow" routerLink="/pages/mpan-details/3000311842220"
-                                       routerLinkActive="active">MPAN -- 3000311842220</a>
-                                </div>
-                                <div class="row">
-                                    <a class="hvr-grow" routerLink="/pages/mpan-details/3007428567721"
-                                       routerLinkActive="active">MPAN -- 3007428567721</a>
-                                </div>
-                                <div class="row">
-                                    <a class="hvr-grow" routerLink="/pages/mpan-details/3038647382451"
-                                       routerLinkActive="active">MPAN -- 3038647382451</a>
-                                </div>
-                                <div class="row">
-                                    <a class="hvr-grow" routerLink="/pages/mpan-details/3052869536957"
-                                       routerLinkActive="active">MPAN -- 3052869536957</a>
-                                </div>
-                                <div class="row">
-                                    <a class="hvr-grow" routerLink="/pages/mpan-details/3062232292802"
-                                       routerLinkActive="active">MPAN -- 3062232292802</a>
-                                </div>
+                        <div class="row" *ngIf="mpanDetailsResponse">
+                            <div class="col-md-12 col-lg-12">
+                                <nb-list>
+                                    <nb-list-item>
+                                        <div class="row">
+                                            <span class="col-md-4"> MPAN-ID </span>
+                                            <span class="col-md-4"> METER ID </span>
+                                            <span class="col-md-4"> ADDRESS </span>
+                                        </div>
+                                    </nb-list-item>
+                                    <nb-list-item *ngFor="let mpan of mpanDetailsResponse.asset.mpans">
+                                        <div class="row">
+                                    <span class="col-md-4">
+                                        <a class="hvr-grow"
+                                           [routerLink]="'/pages/mpan-details/' + mpan.id"
+                                           routerLinkActive="active">
+                                            <span>
+                                                <nb-icon icon="arrow-right" pack="eva" status="info"></nb-icon>
+                                                {{ 'MPAN ID -- ' + mpan.id }}
+                                            </span>
+                                        </a>
+                                    </span>
+                                            <span class="col-md-4">
+                                        <nb-icon icon="arrow-right" pack="eva" status="info"></nb-icon>
+                                        {{ mpan.meter.meter_fk }}
+                                    </span>
+                                            <span class="col-md-4">
+                                        <nb-icon icon="arrow-right" pack="eva" status="warning"></nb-icon>
+                                        {{ mpan.mpan_address.address_1 + ', '
+                                         + mpan.mpan_address.address_2 + ', '
+                                         + mpan.mpan_address.post_code }}
+                                    </span>
+                                        </div>
+                                    </nb-list-item>
+                                </nb-list>
                             </div>
                         </div>
                     </nb-tab>
